position fixed counters overflow auto so jquery for top

--- a/adamant-modal/adamant-modal.css
+++ b/adamant-modal/adamant-modal.css
@@ -1,15 +1,3 @@
-[adamant-modal]:before,
-[adamant-modal-static]:before {
-  background: #000;
-  bottom: 0px;
-  content: '';
-  left: 0px;
-  opacity: .5;
-  position: fixed;
-  right: 0px;
-  top: 0px;
-  z-index: -10000;
-}
 [adamant-modal],
 [adamant-modal-static] {
   background: #FFF;
@@ -17,11 +5,12 @@
   left: 50%;
   margin-left: -384px;
   position: fixed;
-  top: 5em;
+  top: 65px;
   width: 768px;
-  z-index: 1;
 }
-[adamant-modal].adamant-show:not(.adamant-fadein) {
+[adamant-modal].adamant-show:not(.adamant-fadein),
+[adamant-modal-static].adamant-show:not(.adamant-fadein),
+[adamant-modal-background].adamant-show:not(.adamant-fadein) {
   opacity: 0;
 }
 [adamant-modal].adamant-fadein,
@@ -35,24 +24,40 @@
   transition: 1s linear;
 }
 [adamant-modal]:not(.adamant-show),
-[adamant-modal-static]:not(.adamant-show) {
+[adamant-modal-static]:not(.adamant-show),
+[adamant-modal-background]:not(.adamant-show) {
   display: none;
 }
-[adamant-modal]:after,
-[adamant-modal-static]:after {
-  background: #FFF;
-  content: '';
-  height: 100%;
+[adamant-modal-background] {
+  background: #000;
+  bottom: 0px;
   left: 0px;
-  position: absolute;
+  opacity: .5;
+  position: fixed;
+  right: 0px;
   top: 0px;
-  width: 100%;
-  z-index: -1;
 }
-[adamant-modal] .adamant-modal-background {
-  height: 100%;
-  left: 0px;
-  position: absolute;
-  top: 0px;
-  width: 100%;
+@media (max-width: 898px) {
+  [adamant-modal],
+  [adamant-modal-static] {
+    bottom: 65px;
+    left: 65px;
+    margin-left: 0px;
+    right: 65px;
+    top: 65px;
+    width: auto;
+  }
+}
+/* This needs to remain the bottom line so that we can edit it easily. */
+@media (max-width: 450px) {
+  [adamant-modal],
+  [adamant-modal-static] {
+    bottom: auto;
+    height: 100%;
+    left: 0px;
+    min-width: 320px;
+    position: absolute;
+    right: auto;
+    top: 0px;
+  }
 }
